--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#009688"
+    android:background="@drawable/fond"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -13,91 +13,114 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="25dp"
         android:text="Nouvelle intervention"
         android:textColor="#FFFFFF"
         android:textSize="36sp"
+        android:textStyle="bold"
         android:typeface="normal" />
 
     <EditText
         android:id="@+id/nomPrenomClient"
         android:layout_width="fill_parent"
-
         android:layout_height="wrap_content"
+        android:background="@drawable/rounded_edittext"
         android:hint="Nom et prénom du client"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:padding="5dip"
+        android:selectAllOnFocus="true"
+        android:singleLine="false"
+        android:textColor="#FFFFFF" />
 
     <EditText
         android:id="@+id/adresseClient"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/rounded_edittext"
         android:hint="Adresse du client"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"
+        android:padding="5dip" />
 
     <EditText
         android:id="@+id/marqueChaudiere"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/rounded_edittext"
         android:ems="10"
         android:hint="Marque de la chaudière"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:padding="5dip" />
 
     <EditText
         android:id="@+id/modeleChaudiere"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/rounded_edittext"
         android:ems="10"
         android:hint="Modèle de la chaudière"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:padding="5dip" />
 
     <EditText
         android:id="@+id/dateMiseService"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/rounded_edittext"
         android:ems="10"
         android:hint="Date de mise en service"
-        android:inputType="date" />
+        android:inputType="date"
+        android:padding="5dip" />
 
     <EditText
         android:id="@+id/dateIntervention"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/rounded_edittext"
         android:ems="10"
         android:hint="Date de l'intervention"
-        android:inputType="date" />
+        android:inputType="date"
+        android:padding="5dip" />
 
     <EditText
         android:id="@+id/numeroSerie"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/rounded_edittext"
         android:ems="10"
         android:hint="Numéro de série"
-        android:inputType="number" />
+        android:inputType="number"
+        android:padding="5dip" />
 
     <EditText
         android:id="@+id/tempsPasse"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/rounded_edittext"
         android:ems="10"
         android:hint="Temps passé (en minutes)"
-        android:inputType="number" />
+        android:inputType="number"
+        android:padding="5dip" />
 
     <EditText
         android:id="@+id/descriptionIntervention"
         android:layout_width="fill_parent"
-        android:layout_height="150dp"
-        android:layout_marginTop="10dp"
-
-        android:layout_marginBottom="10dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:breakStrategy="balanced"
         android:fitsSystemWindows="true"
         android:gravity="top"
         android:hint="Description de l'intervention"
         android:inputType="textMultiLine"
         android:padding="5dp"
+        android:background="@drawable/rounded_edittext"
         android:singleLine="false" />
 
     <Button
@@ -108,9 +131,6 @@
         android:paddingLeft="70dp"
         android:paddingRight="70dp"
         android:text="Enregistrer"
-        android:textColor="#fff"
-        android:textColorHighlight="#009688"
-        android:textColorLink="#009688"
-        app:iconTint="#009688"
+
         app:rippleColor="#FFFFFF" />
 </LinearLayout>
