--- a/Android/app/src/main/res/layout/activity_ajouter.xml
+++ b/Android/app/src/main/res/layout/activity_ajouter.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="false">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fond"
@@ -84,27 +88,43 @@
         android:inputType="text"
         android:padding="5dip" />
 
-    <EditText
+    <TextView
+        android:id="@+id/textViewMES"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dip"
+        android:text="Date de mise en service de la chaudière"
+        android:textAlignment="viewStart"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp" />
+
+    <DatePicker
         android:id="@+id/dateMiseService"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:background="@drawable/rounded_edittext"
-        android:ems="10"
-        android:hint="Date de mise en service"
-        android:inputType="date"
-        android:padding="5dip" />
+        android:calendarViewShown="false"
+        android:datePickerMode="spinner"
+        android:padding="5dip"/>
 
-    <EditText
+    <TextView
+        android:id="@+id/textViewIntervention"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dip"
+        android:text="Date de l'intervention"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp" />
+
+    <DatePicker
         android:id="@+id/dateIntervention"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:background="@drawable/rounded_edittext"
-        android:ems="10"
-        android:hint="Date de l'intervention"
-        android:inputType="date"
-        android:padding="5dip" />
+        android:calendarViewShown="false"
+        android:datePickerMode="spinner"
+        android:padding="5dip"/>
 
     <EditText
         android:id="@+id/numeroSerie"
@@ -155,3 +175,4 @@
         android:text="Enregistrer"
         app:rippleColor="#FFFFFF" />
 </LinearLayout>
+</ScrollView>
