--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -97,7 +97,7 @@
                     android:layout_marginLeft="15dp"
                     android:background="#00000000"
                     android:hint="Mot de passe"
-                    android:inputType="textPassword"
+                    android:inputType="textWebPassword"
                     android:letterSpacing="0.1"
                     android:textColor="#fff"
                     android:textColorHint="#fff"
