--- a/Android/app/src/main/res/layout/recycler_view_item.xml
+++ b/Android/app/src/main/res/layout/recycler_view_item.xml
@@ -9,7 +9,7 @@
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="60dip">
+        android:layout_height="80dip">
 
         <TableRow
             android:layout_width="match_parent"
@@ -43,6 +43,15 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/tvEstEnvoye"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:textColor="#009688"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
                 <ImageView
@@ -64,6 +73,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:textSize="16sp" />
+
         </TableRow>
 
     </TableLayout>
